--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,14 +1,9 @@
 name: Docker
 
 on:
-  push:
-    branches: 
-      - master
-    tags: 
-      - 'v*.*.*'
-  pull_request:
-    branches: 
-      - master
+  release:
+    types:
+      - published
 
 env:
   # Use docker.io for Docker Hub if empty
